testsuite/tests/typecheck/should_fail/T19978.stderr
T19978.hs:8:7: error: [GHC-01928]
    • Data constructor out of scope: ‘Bool’.
      NB: the type constructor ‘Bool’ cannot appear in this position.
    • In the expression: Bool
      In an equation for ‘ex1’: ex1 = Bool
    Suggested fix:
      Perhaps use one of these:
        ‘Bowl’ (line 11), variable ‘bool’ (line 12)

T19978.hs:14:7: error: [GHC-88464]
    Data constructor not in scope: Let
    Suggested fix: Perhaps use ‘Left’ (imported from Prelude)

T19978.hs:21:7: error: [GHC-01928]
    • Term variable out of scope: ‘mytv’.
      NB: the type variable ‘mytv’ cannot appear in this position.
    • In the expression: mytv
      In an equation for ‘ex3’: ex3 = mytv
    Suggested fix:
      Perhaps use one of these:
        data constructor ‘Mytv’ (line 24), ‘myvv’ (line 25)

